@@ -19,7 +19,6 @@ import com.fongmi.android.tv.utils.KeyUtil;
 import com.fongmi.android.tv.utils.ResUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CustomTitleView extends AppCompatTextView {
 
@@ -86,7 +85,7 @@ public class CustomTitleView extends AppCompatTextView {
     }
 
     private List<Site> getSites() {
-        return VodConfig.get().getSites().stream().filter(site -> !site.isHide()).collect(Collectors.toList());
+        return VodConfig.get().getSites().stream().filter(site -> !site.isHide()).toList();
     }
 
     public interface Listener extends SiteCallback {
