@@ -17,7 +17,6 @@ import com.fongmi.android.tv.R;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class CustomVerticalGridView extends VerticalGridView {
 
@@ -52,7 +51,7 @@ public class CustomVerticalGridView extends VerticalGridView {
     }
 
     public void setHeader(FragmentActivity activity, int... layoutIds) {
-        if (activity != null) views = Arrays.stream(layoutIds).mapToObj(id -> (View) activity.findViewById(id)).filter(Objects::nonNull).collect(Collectors.toList());
+        if (activity != null) views = Arrays.stream(layoutIds).mapToObj(id -> (View) activity.findViewById(id)).filter(Objects::nonNull).toList();
     }
 
     public void setMoveTop(boolean moveTop) {
